--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Arkan Perú — Confianza que impulsa negocios</title>
   <meta name="description" content="Servicios de finanzas, contabilidad, tributario, laboral y legal para pymes y emprendedores." />
+  <link rel="icon" href="assets/isotipo-arkan-peru.png">
+
   <style>
     :root { --primary:#0B2B4C; --accent:#D4AF37; }
     *{ box-sizing:border-box } body{ margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Helvetica Neue,Arial; color:#0f172a; background:#fff }
@@ -33,7 +35,9 @@
 
 <header>
   <div class="container" style="padding:12px 16px; display:flex; align-items:center; justify-content:space-between; gap:16px;">
-    <div style="font-weight:800; color:var(--primary); letter-spacing:.04em;">ARKAN <span style="color:var(--accent)">PERÚ</span></div>
+    <a href="/" style="display:flex; align-items:center; gap:10px;">
+      <img src="assets/logo-arkan-peru.png" alt="Arkan Perú" style="height:36px;">
+    </a>
     <nav>
       <a href="#servicios">Servicios</a>
       <a href="#por-que">Por qué Arkan</a>
@@ -44,6 +48,7 @@
     </nav>
   </div>
 </header>
+
 
 <section class="hero">
   <div class="bgfx"></div>
